--- a/index.html
+++ b/index.html
@@ -133,6 +133,8 @@
                </div>
                <div class="contact_message_container">
                     <form action="https://formsubmit.co/9andyN@gmail.com" method="POST" class="message_form">
+                        <input type="text" name="_honey" style="display: none;">
+                        <input type="hidden" name="_captacha" value="false">
                         <div class="name_inputs inputs">
                             <label for="name">NAME:</label><br>
                             <input type="text" name="name" id="name" required>
