--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Oswald&family=Send+Flowers&family=Space+Mono&display=swap" rel="stylesheet">
+        <script src="main.js"></script>
     </head>
     <body>
         <section>
