--- a/index.html
+++ b/index.html
@@ -153,9 +153,9 @@
                             <textarea name="message" id="message" rows="6" cols="50"></textarea>
                         </div>
                         <div class="sumbit_input inputs">
-                            <button type="submit" id="sumbit">SUMBIT</button>
+                            <button type="submit" id="sumbit" onclick="sendData()">SUMBIT</button>
                         </div>
-                    </form>
+                    </form>  
                </div>
             </div>
         </section>
