--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Oswald&family=Send+Flowers&family=Space+Mono&display=swap" rel="stylesheet">
-        <script src="main.js"></script>
     </head>
     <body>
         <section>
@@ -136,6 +135,7 @@
                     <form action="https://formsubmit.co/9andyN@gmail.com" method="POST" class="message_form">
                         <input type="text" name="_honey" style="display: none;">
                         <input type="hidden" name="_captcha" value="false">
+                        <input type="hidden" name="_next" value="https://kagdya.github.io/Andy-Portfolio/index.html">
                         <div class="name_inputs inputs">
                             <label for="name">NAME:</label><br>
                             <input type="text" name="name" id="name" required>
@@ -150,13 +150,15 @@
                         </div>
                         <div class="message_input inputs">
                             <label for="message">MESSAGE:</label><br>
-                            <textarea name="message" id="message" rows="6" cols="50"></textarea>
+                            <textarea name="message" id="message" rows="6" cols="30"></textarea>
                         </div>
                         <div class="sumbit_input inputs">
-                            <button type="submit" id="sumbit" onclick="sendData()">SUMBIT</button>
+                            <button type="submit" id="sumbit" >SUMBIT</button>
                         </div>
-                    </form>  
+                    </form>
                </div>
             </div>
         </section>
+        
+        
     </body>
